Myriad/wwwroot/css/myriad.21.05.21.css
/* ... */
/* The Close Button */
#zoomclose {position: fixed;z-index:1200;top: 5rem;right: 4rem;color: #f1f1f1;font-size: 40px;font-weight: bold;transition: 0.3s;}
#zoomclose:hover,
#zoomclose:focus {color: #f88;text-decoration: none;cursor: pointer;}
.clear{clear:both;}
p.suppressed, .suppressed p {padding-left: .5em; padding-top: .25em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;background-color:#eee;}
.hidden{display:none;}
.marker{}
.hiddendetail span{display: none;}
.hiddendetail::before {content: "...";color: #4477a1;background-color: whiteSmoke;}
.hiddendetail + .hiddendetail::before{content:"";}
.editparagraph {color:#4477a1; font-size:small;cursor: pointer;   vertical-align: baseline;position: relative;top: -0.4em;}
.dropcap {float: left;font-size: 3em;line-height: 0.5;margin: 0.205em 0 0 0;padding-bottom: .25rem;padding-right:.5rem;}
.firstpoetic .dropcap {margin-right: 1rem;}

/* Tables */
table{margin-bottom:1rem;}
th,td{padding:.25rem;}
table,th,td{border: 1px solid black;border-collapse: collapse;}
th.left,td.left{text-align:left;}
th.center,td.center{text-align: center;}
th.right,td.right{text-align: right;}

/*VERTICAL SPACING */
html, body{height:100vh;}
sup, sub {vertical-align: baseline; position: relative;top:-0.4em;}
sub {top: 0.4em;}

div.sidenote{margin-bottom:.75em;}
h2{font-size:1.75em;line-height: 2rem;margin-bottom:1rem;}
h3{font-size:1.4em;margin-bottom:1rem;margin-top:.4rem;line-height:2rem;}
ul, li, ol, dl{list-style:none;padding:0;}
ul {margin-top:.5rem;}
p{line-height:1.5em;padding-bottom:.5em;-webkit-margin-before:0em;-webkit-margin-after:0em;margin-top:0;margin-bottom:0;}
.scripture-text p{line-height:1.4em;}
.sidebarScripture p{padding-bottom:.1em;}
.firstverse + .poetic, p.firstverse + p.firstpoetic{margin-top:.75rem;}
p.poetic+p.poetic, p.firstpoetic+p.poetic, .sidebarScripture p.firstpoetic{margin-top:0}
.sidenote p{padding-bottom: .5em;}
.sidenote details p{padding-bottom:.1em;}
.scripture h3{margin-bottom:0.5em;}
article{padding-top:5em;padding-bottom:3em;min-height:40rem;}
.sidenote{margin-top:.7rem;}
.introduction{border-bottom:2px solid grey;margin-bottom:2em;}
div+section.scripture{margin-top:1.5rem;}
div.crossrefs details summary+p{margin-top:.4em;}
section{display:block;align-items:stretch;}
.fixedposition {position: fixed;}
.editcontent{overflow-y:auto;height: calc(100vh - 15rem);padding-left:4rem;padding-right:4rem;padding-bottom:4rem;white-space: pre-wrap;font-family: monospace;font-size: 1.25rem;line-height: 1.5rem;}
*:focus {outline: none;}
.poetic:last-child {padding-bottom:.5rem;}
/*HORIZONTAL SPACING */
article{width:60rem;padding-left:10rem;}
article.withsidebar{animation: none;padding-left:3rem;}
article.opening{animation-name: opensidebar; animation-duration:.2s;}
@keyframes opensidebar{from{padding-left:10rem;}to{padding-left:3rem;}}
.withoutsidebar{animation-name: closesidebar; animation-duration:.2s;}
@keyframes closesidebar{from{padding-left:3rem;}to{padding-left:10rem;}}
.scripture-comment p{margin-left:0;margin-right:0;}
.readingverse {position:absolute;left:17.5rem;}
article.withsidebar .readingverse {left: 10.5rem;}
article.opening .readingverse {animation-name: sidebarreadingverse; animation-duration:.2s;}
@keyframes sidebarreadingverse{from{left:17.5rem;}to{left:10.5rem;}}
article.withoutsidebar .readingverse {animation-name: closesidebarverse; animation-duration:.2s;}
@keyframes closesidebarverse{from{left:10.5rem;}to{left:17.5rem;}}
.firstpoetic .readingverse {position:absolute;left:18.5rem;}
.poetic .readingverse {position:absolute;left:18.5rem;}
article.opening .firstpoetic .readingverse {animation-name: sidebarpoeticverse; animation-duration:.2s;}
article.opening .poetic .readingverse {animation-name: sidebarpoeticverse; animation-duration:.2s;}
article.withsidebar .firstpoetic .readingverse {position:absolute;left:11.5rem;}
article.withsidebar .poetic .readingverse {position:absolute;left:11.5rem;}
@keyframes sidebarpoeticverse{from{left:18.5rem;}to{left:11.5rem;}}
article.withoutsidebar p.firstpoetic .readingverse {animation-name: closesidebarpoeticverse; animation-duration:.2s;}
article.withoutsidebar p.poetic .readingverse {animation-name: closesidebarpoeticverse; animation-duration:.2s;}
@keyframes closesidebarpoeticverse{from{left:11.5rem;}to{left:18.5rem;}}
figure{-webkit-margin-start:0;-webkit-margin-end:0;}
figure.portrait, figure.square, .sidenote{display:block;float:right;width:26rem;}
figure.portrait, .sidenote{ border-left:2px solid #d3d3d3;}
.crossrefs+.sidenote{float:none;border:0;}
.rightside {margin-left:1%;}
img.portrait {float:right;}
img.portrait.leftside {float:none;}
img.sibling.landscape {margin-right:0; display:inline;}
ul.tabs, .definitionBlock div, .searchResults{width:48rem;}
.definitionBlock div{display:block;}
img.landscape{display:block;}
/*Left*/
.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-left:8rem;}
table {margin-left:8.5rem;}
div.textquote table {margin-left:1.5rem;}
.flexTabs .tab li {
    margin-left: 2rem;
}
.nav{margin-left:.5rem;}
.versenav{margin-left:9rem;}
.textquote {margin-left:10rem;}
.menu{margin-left: 20rem;}
figure.portrait, figure.square, .sidenote{margin-left:2rem;}
div .crossrefs+div.sidenote{padding-left:0;}
img.landscape{margin-left:auto;}
img.landscape.rightside{margin-left:1%;}
.sidenote p, .sidenote h3, #comments .sidenote p, #comments .sidenote h3 {
    margin-left: 2rem; margin-right: 0;
}
/*Right*/
.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-right:8rem;}
.flexTabs .tab li {margin-right:2rem;}
.textquote{margin-right:10rem;}
img.landscape{margin-right:auto;}
.sidenote p, .sidenote h3{margin-right:0;}

/*Poetic*/
.firstpoetic {
    padding-left: 1rem;
    text-indent: -1rem;
}
p.firstpoetic, p.poetic {
    padding-bottom: .1rem;
}
/* ... */

